# voko

./: .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  .travis.yml  CLAUDE.md  DEPLOY.md  Dockerfile  Makefile  Pipfile  README.md  README.txt  README.vokoa.md  docker-compose-dev.yaml  docker-compose.deploy.yml  docker-compose.yml  docker-entrypoint.prod.sh  docker-entrypoint.sh  entrypoint.sh  pyproject.toml  requirements.txt
.github/: ci.yml  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  lint.yml
data/db/: postmaster.pid
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat_tmp/: db_0.stat  db_13757.stat  global.stat
data/db/pg_subtrans/: 0000
data/db/pg_xact/: 0000
docs/: REFACTORING_PLAN.md  metabase.md
infra/ansible/: inventory.yml  playbook.yml
infra/ansible/vars/: main.yml  vault.example.yml
requirements/: base.txt  development.txt  production.txt
vokou/: db.sqlite3  manage.py
vokou/vokou/: settings.py  urls.py
webapp/: conftest.py  gunicorn.sh  manage.py  production_secrets.sh  runcrons.sh  runserver.sh  runtests.sh  utils.py  uwsgi.ini  uwsgi.sh
webapp/accounts/: admin.py  apps.py  cron.py  forms.py  mails.py  models.py  signals.py  urls.py  views.py
webapp/accounts/migrations/: 0001_initial.py  0002_auto_20140915_0934.py  0006_auto_20140915_0934.py  0006_merge.py  0007_auto_20140915_1118.py  0008_auto_20140915_1204.py  0009_auto_20141205_1141.py  0010_auto_20141205_1154.py  0011_auto_20141205_1201.py  0012_auto_20141205_1203.py  0013_auto_20141205_1216.py  0014_userprofile_phone_number.py  0015_auto_20150708_0922.py  0016_vokouser_is_asleep.py  0017_auto_20150816_1514.py  0018_auto_20150816_1523.py  0019_auto_20160315_1106.py  0020_auto_20170502_0904.py  0021_auto_20180527_1414.py  0022_userprofile_has_drivers_license.py  0023_userprofile_share_contact_info.py  0024_remove_userprofile_share_contact_info.py  0025_vokouser_activated.py  0026_userprofile_contact_person.py  0027_auto_20190909_1921.py  0028_auto_20200223_1124.py  0029_alter_address_id.py  0029_group.py  0030_auto_20230213_1746.py  0031_auto_20230321_1717.py  0032_alter_userprofile_shares_car.py  0033_userprofile_orderround_mail_optout.py  0034_vokouser_deletion_warning.py
webapp/accounts/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_signals.py  (+1 more)
webapp/agenda/: admin.py  models.py
webapp/api/: urls.py  utils.py  views.py
webapp/distribution/: admin.py  apps.py  mixins.py  models.py  urls.py  views.py
webapp/docs/: admin.py  models.py  urls.py  views.py
webapp/finance/: admin.py  admin_views.py  models.py  urls.py  views.py
webapp/groups/: admin.py  mixins.py  models.py  urls.py  views.py
webapp/log/: __init__.py  admin.py  models.py
webapp/mailing/: admin.py  helpers.py  models.py  urls.py  views.py
webapp/news/: admin.py  models.py  urls.py  views.py
webapp/ordering/: admin.py  admin_urls.py  admin_views.py  context_processors.py  core.py  cron.py  forms.py  mails.py  mixins.py  models.py  urls.py  views.py
webapp/pages/: admin.py  apps.py  models.py  urls.py  views.py
webapp/shared/: __init__.py  admin.py  models.py
webapp/templates/: 404.html  500.html  base.html  footer.html  header.html  login.html  menu.html  privacy_statement.html  regulations.html
webapp/transport/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
webapp/vokoa/: admin.py  testing.py  urls.py  wsgi.py
webapp/vokou/: admin.py  context_processors.py  middleware.py  settings.py  testing.py  urls.py  views.py  wsgi.py
(+611 files in other folders)
