[project]
name = "voko"
version = "0.1.0"
description = "VOKO webapp"
requires-python = ">=3.8"
dependencies = [
    "django-extensions==3.1.2",
    "django-bootstrap5==23.3",
    "django-braces==1.14.0",
    "pytz==2021.1",
    "django-cron==0.6.0",
    "html2text==2020.1.16",
    "django-tinymce==4.1.0",
    "mollie-api-python==2.12.0",
    "django-hijack==3.2.6",
    "jsonfield==3.1.0",
    "openpyxl==3.1.0",
    "simplejson==3.18.3",
    "django-nose==1.4.7",
    "nose==1.3.7",
    "django-recaptcha==3.0.0",
    "django-constance[database]==2.9.1",
    "django-picklefield==2.1.1",
    "psycopg2-binary==2.9.9",
    "Django==3.2.25",
    "gunicorn==22.0.0",
    "python-dateutil==2.8.2",
    "tzlocal>=5.2",
]

[project.optional-dependencies]
dev = [
    "fake-factory==0.7.4",
    "factory-boy==3.2.1",
    "mock==1.0.1",
    "django-debug-toolbar==3.8.1",
    "flake8==3.8.4",
    "debugpy==1.6.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webapp"]

[tool.uv]
dev-dependencies = [
    "fake-factory==0.7.4",
    "factory-boy==3.2.1",
    "mock==1.0.1",
    "django-debug-toolbar==3.8.1",
    "flake8==3.8.4",
    "debugpy==1.6.6",
]
