[project]
name = "voko"
version = "0.1.0"
description = "VOKO webapp"
requires-python = ">=3.11,<3.13"
dependencies = [
    "django-extensions>=3.2.3",
    "django-bootstrap5>=24.3",
    "django-braces>=1.16.0",
    "pytz==2021.1",
    "django-cron==0.6.0",
    "html2text==2020.1.16",
    "django-tinymce>=4.1.0",
    "mollie-api-python==2.12.0",
    "django-hijack>=3.4.5",
    "jsonfield>=3.1.0",
    "openpyxl>=3.1.0",
    "simplejson>=3.18.3",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "django-recaptcha>=4.0.0",
    "django-constance>=3.1.0",
    "django-picklefield>=3.1",
    "psycopg2-binary>=2.9.9",
    "Django>=4.2,<5.0",
    "gunicorn>=22.0.0",
    "python-dateutil>=2.8.2",
    "tzlocal>=5.2",
    "freezegun>=1.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webapp"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.0",
    "django-debug-toolbar>=4.4.0",
    "debugpy>=1.6.6",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "vokou.settings.testing"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["webapp"]
